cluster/jenkins/flask.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask-app
  namespace: app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - resources:
          requests:
            cpu: "50m"
            memory: "256Mi"
          limits:
            cpu: "2000m"
            memory: "4096Mi"
        name: flask-app
        image: bryonsmith/flaskapp-demo:v1
        ports:
          - name: flask-port
            containerPort: 5000
---
# jenkins http port for ui
kind: Service
apiVersion: v1
metadata:
  name: flask-ui
  namespace: app
spec:
  # type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: flask-default-port
---
# Ingress-Nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  namespace: app
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: flask-ui
            port:
              number: 80
